* Update package.json * Update front end layouts with header and footer * Update README.md * Complete translation logic * Complete routing logic * Write 24 unit tests * Write 6 functional tests

--- a/views/index.html
+++ b/views/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
-<html>
 
+<html lang="en-AU">
 <head>
-	<title>American/British English Translator</title>
-	<meta name="description" content="An example for the fCC QA American/British English Translator project" />
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
-	<link rel="stylesheet" href="../public/style.css" type="text/css" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="An example for the fCC QA American/British English Translator project">
+
+  <title>American/British English Translator</title>
+  <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png"
+        type="image/x-icon">
+
+  <link rel="stylesheet" href="/public/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="/public/css/style.css" type="text/css">
 </head>
 
 <body>
-	<header>
-		<h1>
-			American / British English Translator
-		</h1>
-	</header>
-	<hr style="margin: 25px" />
-	<div class="container">
-		<div class="form-container">
+<header>
+  <h1 class="text-center fw-bold mt-4 mb-4">
+    <span class="text-multi-color">American / British English Translator</span>
+  </h1>
+</header>
+
+<hr>
+
+<div class="container mt-4">
+  <div class="form-container mb-4">
 			<textarea
-          rows="10"
-          cols="60"
-          id="text-input"
-        ></textarea>
-        <br />
-        <select id="locale-select">
-          <option value="american-to-british">American to British</option>
-          <option value="british-to-american">British to American</option>
-        </select>
-        <input type="button" value="Translate" id="translate-btn"/>
-      </div>
-      <div id="output-container">
-        <div id="solution-container">
-          Translated Sentence:
-          <div id="translated-sentence"></div>
-          <div id="error-msg"></div>
-        </div>
-      </div>
+        rows="10"
+        cols="60"
+        id="text-input"
+        class="form-control mb-3"
+      ></textarea>
+
+    <select id="locale-select" class="form-select mb-3">
+      <option value="american-to-british">American to British</option>
+      <option value="british-to-american">British to American</option>
+    </select>
+
+    <input type="button" value="Translate" id="translate-btn" class="btn btn-primary w-100 mb-3"/>
+  </div>
+
+  <div id="output-container">
+    <div id="solution-container">
+      Translated Sentence:
+      <div id="translated-sentence"></div>
+      <div id="error-msg"></div>
     </div>
-  </body>
-  <script src="../public/index.js"></script>
+  </div>
+</div>
+
+<p class="text-center fw-bold mt-5 mb-5">
+  <span class="text-multi-color">Developed by </span>
+  Minh Ta
+</p>
+
+<script type="text/javascript" src="/public/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="/public/js/index.js"></script>
+</body>
 </html>
